Reviewed by Oliver.

Rework <pattern> support to take overflow & viewBox into account.
Also fix all possible combinations of patternUnits/patternContentUnits, tested by several batik testcases.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=12221 (Webkit ToT fails to render this pattern example)


git-svn-id: http://svn.webkit.org/repository/webkit/branches/feature-branch@25460 268f45cc-cd09-0410-ab3c-d52691b4dbfc