WebCore/ksvg2/svg/PatternAttributes.h
@@ -28,10 +28,10 @@ namespace WebCore
 {
     struct PatternAttributes {
         PatternAttributes()
-            : m_x(0.0)
-            , m_y(0.0)
-            , m_width(0.0)
-            , m_height(0.0)
+            : m_x()
+            , m_y()
+            , m_width()
+            , m_height()
             , m_boundingBoxMode(true)
             , m_boundingBoxModeContent(false)
             , m_patternContentElement(0)
@@ -46,19 +46,19 @@ namespace WebCore
         {
         }
 
-        double x() const { return m_x; }
-        double y() const { return m_y; }
-        double width() const { return m_width; }
-        double height() const { return m_height; }
+        SVGLength x() const { return m_x; }
+        SVGLength y() const { return m_y; }
+        SVGLength width() const { return m_width; }
+        SVGLength height() const { return m_height; }
         bool boundingBoxMode() const { return m_boundingBoxMode; }
         bool boundingBoxModeContent() const { return m_boundingBoxModeContent; }
         AffineTransform patternTransform() const { return m_patternTransform; }
         const SVGPatternElement* patternContentElement() const { return m_patternContentElement; }
 
-        void setX(double value) { m_x = value; m_xSet = true; }
-        void setY(double value) { m_y = value; m_ySet = true; }
-        void setWidth(double value) { m_width = value; m_widthSet = true; }
-        void setHeight(double value) { m_height = value; m_heightSet = true; }
+        void setX(const SVGLength& value) { m_x = value; m_xSet = true; }
+        void setY(const SVGLength& value) { m_y = value; m_ySet = true; }
+        void setWidth(const SVGLength& value) { m_width = value; m_widthSet = true; }
+        void setHeight(const SVGLength& value) { m_height = value; m_heightSet = true; }
         void setBoundingBoxMode(bool value) { m_boundingBoxMode = value; m_boundingBoxModeSet = true; }
         void setBoundingBoxModeContent(bool value) { m_boundingBoxModeContent = value; m_boundingBoxModeContentSet = true; }
         void setPatternTransform(const AffineTransform& value) { m_patternTransform = value; m_patternTransformSet = true; }
@@ -75,10 +75,10 @@ namespace WebCore
 
     private:
         // Properties
-        double m_x;
-        double m_y;
-        double m_width;
-        double m_height;
+        SVGLength m_x;
+        SVGLength m_y;
+        SVGLength m_width;
+        SVGLength m_height;
         bool m_boundingBoxMode;
         bool m_boundingBoxModeContent;
         AffineTransform m_patternTransform;
