WebCore/platform/graphics/svg/cg/SVGPaintServerGradientCg.cpp
@@ -286,7 +286,11 @@ bool SVGPaintServerGradient::setup(GraphicsContext*& context, const RenderObject
         IntRect maskRect = enclosingIntRect(object->absoluteTransform().mapRect(maskBBox));
 
         auto_ptr<ImageBuffer> maskImage = ImageBuffer::create(IntSize(maskRect.width(), maskRect.height()), false);
-        // FIXME: maskImage could be NULL
+
+        if (!maskImage.get()) {
+            context->restore();
+            return false;
+        }
 
         GraphicsContext* maskImageContext = maskImage->context();
         maskImageContext->save();
